Welcome to the NcX changelog

Changelog from 20230501 > 20230502:
• Fix Reboot to Download Mode - SystemUI

Changelog from 20230401 > 20230501:
• Test OTA update, no important changes


On Update v1.0.0:
• Initial release