@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <OnOTAInfo>
   <RomName>NcX S21FE</RomName>
-  <VersionName>20230502 Update</VersionName>
-  <BuildNumber type="integer">20230502</BuildNumber>
-  <DownloadURL>https://github.com/ShaDisNX255/NcX_OnUpdate/releases/download/a52sxq-20230502/OTA-20230502-a52sxq.zip</DownloadURL>
+  <VersionName>20230503 Update</VersionName>
+  <BuildNumber type="integer">20230503</BuildNumber>
+  <DownloadURL>https://github.com/ShaDisNX255/NcX_OnUpdate/releases/download/a52sxq-20230503/OTA-20230503-a52sxq.zip</DownloadURL>
   <AndroidVer>13</AndroidVer>
   <OneUIVer>5.1</OneUIVer>
-  <CheckMD5>a0977e4843cab3d2b5de50cb3a1e0cc9</CheckMD5>
-  <FileSize type="long">28277364</FileSize>
+  <CheckMD5>f7abc8a97d2e832790f569697019b8f4</CheckMD5>
+  <FileSize type="long">28279470</FileSize>
   <WebsiteURL>https://forum.xda-developers.com/apps/magisk/dev-magisk-canary-channel-bleeding-edge-t3839337</WebsiteURL>
   <ChangelogHeader>https://i.ibb.co/92RxppQ/changelogheader1100.png</ChangelogHeader>
   <ChangelogURL>https://raw.githubusercontent.com/ShaDisNX255/NcX_OnUpdate/main/a52sxq/changelog.txt</ChangelogURL>
