@@ -1,0 +1,42 @@
+# Before: ui_print("  Hi! ");
+# Now:    ui_print " Hi! "
+#-----------Dynamic Installer Configs-----------#
+#The #MAGISK tag is required, dont remove it
+#MAGISK
+setdefault magisk_support off
+setdefault run_addons off
+setdefault apex_mount on
+setdefault extraction_speed default
+setdefault permissions "0755:0644"
+setdefault devices off
+#-----------------------------------------------#
+#script:
+
+#for printing stuff
+ui_print " "
+
+ui_print " ___________________________________"
+ui_print "       20230503 update - A52s       "
+ui_print " ¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯"
+
+#Installation
+ui_print " Mounting partitions... "
+auto_mount_partitions
+ui_print " Extracting files... "
+package_extract_dir system /system
+ui_print " Updating ROM version strings... "
+update_file_string "ro.on.core.version=20230503" "/system/build.prop"
+update_file_string "ro.on.core.build=20230503" "/system/build.prop"
+ui_print " Giving permissions... "
+set_perm 0 0 0644 /system/system_ext/priv-app/SystemUI/SystemUI.apk
+set_perm 0 0 0644 /system/build.prop
+set_perm 0 0 0644 /system/etc/default-permissions/default-permissions_com.mesalabs.ten.update.xml
+set_perm 0 0 0644 /system/etc/permissions/privapp_whitelist_com.mesalabs.ten.update.xml
+#Delete update
+ui_print " Deleting update from storage and update app settings... "
+delete_recursive /data/media/0/Android/data/com.mesalabs.ten.update
+delete_recursive /data/data/com.mesalabs.ten.update
+#unmount
+ui_print " Unmounting... "
+umount_all
+ui_print " OTA update complete! "
